syntax = "proto3";

package message;
option go_package = "/message";

// Message Service
service MessageService {
  rpc SendMessage(stream MessageRequest) returns (MessageResponse) {};
}

// The request message
message MessageRequest {
  string message = 1;
}

// The response message
message MessageResponse {
    repeated MessageError messageError = 1;
}

// message error
message MessageError {
  string message = 1;
}